--- a/projects.html
+++ b/projects.html
@@ -5,8 +5,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projects</title>
+  <link rel="stylesheet" href="style.css">
+  <script defer src="main.js"></script>
 </head>
 <body>
+  <div class="main-wrapper">
+    <div class="profile" onclick="menuToggle();">
+      <img src="image/L James.jpg" alt="">
+    </div>
+    <div class="menu-drp">
+      <h3>Lemar James<br><span>A Web Developer</span></h3>
+      <ul>
+        <li><img src="image/house_FILL0_wght400_GRAD0_opsz48.svg"><a href="index.html">Home</a></li>
+        <li><img src="image/account_circle_FILL0_wght400_GRAD0_opsz48.svg"><a href="about.html">About</a></li>
+        <li><img src="image/Resume.svg"><a href="resume.html">Resume</a></li>
+        <li><img src="image/contact_support_FILL0_wght400_GRAD0_opsz48.svg"><a href="contact.html">Contact</a></li>
+      </ul>
+    </div> 
+
+  </div>
   
 </body>
 </html>
