--- a/HTML/about.html
+++ b/HTML/about.html
@@ -6,18 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About</title>
   <script defer src="main.js"></script>
-  <link rel="stylesheet" href="about.css">
+  <link rel="stylesheet" href="/CSS/about.css">
 </head>
 <body>
 
   <div class="menu-bx">    
     <ul>
-      <li><img src="image/house_FILL0_wght400_GRAD0_opsz48.svg"><a href="index.html">Home</a></li>
-      <li><img src="image/Resume.svg"><a href="resume.html">Resume</a></li>
-      <li><img src="image/Projects.svg"><a href="projects.html">Projects</a></li>
-      <li><img src="image/contact_support_FILL0_wght400_GRAD0_opsz48.svg"><a href="contact.html">Contact</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
+
+  <main>
+
+    <img src="/image/L James.jpg" alt="">
+
+    <div class="about-text">
+      <p>Over the pass four months web development as become integral part of my life. 
+        I've fallen inlove with the process of creating something from scratch (learning a different language). The process 
+        showed me that there is a alot of different thing to learn and improve upon.   
+      </p>
+    </div>
+    
+
+  </main>
+  
 
   
 </body>
