Fixing the HTML

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -5,26 +5,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/CSS/contact.css">
   <script defer src="main.js"></script>
 </head>
 <body>
-  <div class="main-wrapper">
-    <div class="profile" onclick="menuToggle();">
-      <img src="image/L James.jpg" alt="">
-    </div>
-    <div class="menu-drp">
-      <h3>Lemar James<br><span>A Web Developer</span></h3>
-      <ul>
-        <li><img src="image/house_FILL0_wght400_GRAD0_opsz48.svg"><a href="index.html">Home</a></li>
-        <li><img src="image/account_circle_FILL0_wght400_GRAD0_opsz48.svg"><a href="about.html">About</a></li>
-        <li><img src="image/Resume.svg"><a href="resume.html">Resume</a></li>
-        <li><img src="image/Projects.svg"><a href="projects.html">Projects</a></li>
-      </ul>
-    </div> 
+  <div class="menu-bx">    
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
   </div>
 
+  <form action="">
 
+
+
+
+
+    
+  </form>
 
 
 
