Contact page draft 2

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -21,7 +21,7 @@
   <main>
     <div class="top-text">
       <h1 class="header1">Contact</h1>
-      <h2>I want to hear from you</h2>
+      <h2 class="header2">I want to hear from you</h2>
     </div>  
 
     <div class="box">
